# toronto-guard

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yaml
src/: bot.rs  commands.rs  config.rs  main.rs
